:zap: redis 로 인기검색어 순위 api 구현